# rocMolKit

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  ISSUES.md  NOTICE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
cmake/: ROCmTargets.cmake
docker/: .dockerignore  Dockerfile.devel  Dockerfile.slim  runtime-libs.txt
rocmolkit/: CMakeLists.txt  __init__.py  safe.py
rocmolkit/benchmarks/: eigen_solver_bench.hip.cpp  etkdg_ff_bench.cpp  morgan_fp.cpp  updateInverseHessianBench.hip.cpp
rocmolkit/include/rocmolkit/: cg_reduce_shim.h  cuda_std_compat.h  hip_compat.h
rocmolkit/nvmolkit/: CMakeLists.txt  array_helpers.h  batchedForcefield.cpp  substructure.cpp
rocmolkit/rdkit_extensions/: mmff_contribs.cpp
rocmolkit/src/: butina.h  butina.hip.cpp  conformer_rmsd.h  conformer_rmsd.hip.cpp  conformer_rmsd_mol.cpp  conformer_rmsd_mol.h  etkdg.cpp  etkdg_impl.cpp  etkdg_impl.h  etkdg_kernels.hip.cpp  etkdg_stage_coordgen.h  etkdg_stage_coordgen.hip.cpp  etkdg_stage_distgeom_minimize.h  etkdg_stage_distgeom_minimize.hip.cpp  etkdg_stage_etk_minimization.h  etkdg_stage_etk_minimization.hip.cpp  etkdg_stage_stereochem_checks.h  etkdg_stage_stereochem_checks.hip.cpp  etkdg_stage_update_conformers.h  etkdg_stage_update_conformers.hip.cpp  load_store.hip.h  morgan_fingerprint.cpp  morgan_fingerprint.h  morgan_fingerprint_gpu.cpp  morgan_fingerprint_gpu.h  morgan_fingerprint_kernels.h  morgan_fingerprint_kernels.hip.cpp  similarity.cpp  similarity.h  similarity_kernels.h  similarity_kernels.hip.cpp  similarity_op.hip.h  symmetric_eigensolver.hip.cpp  triangle_smooth.h  triangle_smooth.hip.cpp  versions.h.in
rocmolkit/src/conformer/: device_coord_collector.cpp  device_coord_collector.h  etkdg_device_collect.hip.cpp  ff_device_collect.cpp  ff_device_collect.h
rocmolkit/src/data_structures/: flat_bit_vect.h
rocmolkit/src/forcefields/: batched_forcefield.h  coord_gen.hip.cpp  dg_batched_forcefield.h  dg_batched_forcefield.hip.cpp  dist_geom.h  dist_geom.hip.cpp  dist_geom_kernels.h  dist_geom_kernels.hip.cpp  dist_geom_kernels_device.hip.h  etk_batched_forcefield.h  etk_batched_forcefield.hip.cpp  kernel_utils.hip.cpp  kernel_utils.hip.h  mmff.h  mmff.hip.cpp  mmff_batched_forcefield.h  mmff_batched_forcefield.hip.cpp  mmff_kernels.h  mmff_kernels.hip.cpp  mmff_kernels_device.hip.h  uff.h  uff.hip.cpp  uff_batched_forcefield.h  uff_batched_forcefield.hip.cpp  uff_kernels.h  uff_kernels.hip.cpp  uff_kernels_device.hip.h
rocmolkit/src/minimizer/: bfgs_hessian.h  bfgs_hessian.hip.cpp  bfgs_hessian_stub.cpp  bfgs_minimize.h  bfgs_minimize.hip.cpp  bfgs_minimize_permol_kernels.h  bfgs_minimize_permol_kernels.hip.cpp  bfgs_mmff.cpp  bfgs_uff.cpp
rocmolkit/src/substruct/: atom_data_packed.h  boolean_tree.hip.h  gpu_executor.h  gpu_executor.hip.cpp  graph_labeler.hip.h  molecules.cpp  molecules.h  molecules_device.hip.h  recursive_preprocessor.h  recursive_preprocessor.hip.cpp  sm_shared_mem_config.hip.h  substruct_algos.hip.h  substruct_kernels.h  substruct_kernels.hip.cpp  substruct_launch_config.h  substruct_search.h  substruct_search.hip.cpp  substruct_search_internal.cpp  substruct_search_internal.h
rocmolkit/src/testutils/: substruct_validation.h  substruct_validation.hip.cpp
rocmolkit/src/tfd/: tfd_common.h  tfd_detail.h  tfd_gpu.cpp  tfd_kernels.h  tfd_kernels.hip.cpp  tfd_transfer.hip.cpp
rocmolkit/src/utils/: cub_helpers.hip.h  cuda_error_check.h  device.cpp  device.h  device_timings.hip.h  device_vector.h  exceptions.cpp  exceptions.h  host_vector.h  macros_ptx.hip.h  nvtx.h  p2p.cpp  p2p.h
rocmolkit/tests/: test_bfgs_hessian.cpp  test_bfgs_minimizer.hip.cpp  test_boolean_tree.hip.cpp  test_butina.cpp  test_coordgen.hip.cpp  test_cuda_error_check.cpp  test_device.cpp  test_device_timings.hip.cpp  test_device_vector.cpp  test_distgeom.hip.cpp  test_distgeom_kernels.hip.cpp  test_etkdg_coordgen.hip.cpp  test_etkdg_device_output.hip.cpp  test_etkdg_etk_minimize.hip.cpp  test_etkdg_minimize.hip.cpp  test_ff_device_output.hip.cpp  test_flat_bit_vect_device.hip.cpp  test_graph_labeler.hip.cpp  test_graph_labeler_recursive.hip.cpp  test_host_vector.hip.cpp  test_mmff.hip.cpp  test_molecules.hip.cpp  test_morgan_fingerprint.cpp  test_p2p.cpp  test_query.hip.cpp  test_recursive_preprocessor.hip.cpp  test_similarity.cpp  test_substruct_algos.hip.cpp  test_substruct_integration.hip.cpp  test_substruct_label_integration.hip.cpp  test_tfd_kernels.hip.cpp  test_uff.hip.cpp  test_utils.h
rocmolkit/tests/integration/: test_fp_sim_workflow.cpp
tests/: conftest.py  test_safe.py  test_smoke.py
tests/data/: druglike_100.smi  spice_100.smi
tests/repro/: README.md  asyncvec_stress.cpp  embed_pure_cpp.cpp
tools/: benchmark.py  build_rdkit.sh  hipify_all.sh  numerical_diff.py  strip_release.sh  validate_gpu.sh
